# OpenGL

./: .gitignore  CMakeLists.txt  README.MD
inc/: CONFIG.hpp  IndexBuffer.hpp  Program.hpp  Shaders.hpp  Textures.hpp  VertexBuffer.hpp  Window.hpp  gl_api.h  gl_api.hpp  glad.h
shaders/: fragment_shader.c  vertex_shader.c
src/: CMakeLists.txt  IndexBuffer.cpp  Program.cpp  Shaders.cpp  Textures.cpp  VertexBuffer.cpp  Window.cpp  gl_api.cpp  rtest.cpp  tester2.cpp
tests/: CMakeLists.txt
